# Cypress

.github/ISSUE_TEMPLATE/: config.yml
Launcher/CypressLauncher/: MessageHandler.Core.cs  MessageHandler.Launch.cs  MessageHandler.Update.cs
Launcher/wwwroot/: index.html
Launcher/wwwroot/js/: actions.js  browser.js  data.js  instances.js
Server/: CMakeLists.txt  pch.h
Server/Source/Anticheat/: LoadoutValidator.cpp  LoadoutValidator.h  PlayerSpawnListener.cpp
Server/Source/Core/: Server.cpp  Server.h
Server/Source/GameHooks/: fbClientHooks.cpp  fbClientHooks.h  fbServerHooks.cpp  fbServerHooks.h
Server/Source/fb/Engine/: MessageManager.cpp
Server/include/: SideChannel.cpp
Server/include/fb/Engine/: MessageListener.h  MessageManager.h  ServerConnection.h  ServerPlayer.h
